Fixed constricted width on list view. Made inspector full screen on mobile

--- a/src/plants/Plants.css
+++ b/src/plants/Plants.css
@@ -11,11 +11,6 @@
   height: calc(100% - 3em);
 }
 
-.plants__lists-container {
-  flex-grow: 1;
-  padding: 2em 2em 0 2em;
-}
-
 .plants__lists {
   overflow-y: scroll;
   height: calc(100% - 3em - 4px);
