--- a/src/plants/plant-list/components/InspectorPanel.css
+++ b/src/plants/plant-list/components/InspectorPanel.css
@@ -1,6 +1,6 @@
 .inspector-panel__default {
-  max-width: 540px;
-  min-width: 540px;
+  /* max-width: 540px;
+  min-width: 540px; */
   height: 100%;
   /* Photo by Annie Spratt on Unsplash */
   background: url('../../../assets/annie-spratt-unsplash.jpg') no-repeat;
@@ -13,8 +13,8 @@
 }
 
 .inspector-panel__container {
-  max-width: 540px;
-  min-width: 540px;
+  /* max-width: 540px;
+  min-width: 540px; */
   display: flex;
   flex-direction: column;
   box-shadow: -1px 2px 4px 2px rgba(0, 0, 0, 0.3);
