--- a/src/plants/plant-list/components/ListRow.css
+++ b/src/plants/plant-list/components/ListRow.css
@@ -7,12 +7,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: calc(100% - 1.5em);
+  /* width: calc(100% - 1.5em); */
 }
 
 .list-row__text {
   width: 100%;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 .list-row__watering-days-number {
@@ -20,10 +20,6 @@
   display: flex;
   align-items: center;
   margin-top: 0.25em;
-}
-
-.list-row__plant-name {
-  max-width: 50%;
 }
 
 .list-row__buttons {
